# goit-pythonweb-hw-10

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: auth.py  contacts.py  users.py
conf/: config.py
database/: db.py
dependencies/: auth.py  db.py
migrations/: env.py
migrations/versions/: 68c3e4abc947_initial_migration.py
models/: contacts.py  models.py  users.py
repositories/: contacts.py  users.py
schemas/: contact.py  user.py
services/: auth.py  contacts.py  email.py  upload_file.py  users.py
